--- a/assets/base.css
+++ b/assets/base.css
@@ -13,8 +13,28 @@ body {
     Roboto,
     'Helvetica Neue',
     sans-serif;
-  font-size: 16px;
+  font-size: 18px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+h1, h2 {
+  line-height: 1.2;
+}
+h1 {
+  font-size: 3rem;
+  margin-bottom: 2rem;
+}
+h2 {
+  font-size: 2.5rem;
+  margin-bottom: 1.5rem;
+}
+h3 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+h4 {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
 }
