Modify theme color

--- a/assets/theme/themes/material/material-dark/standard/indigo/_variables.scss
+++ b/assets/theme/themes/material/material-dark/standard/indigo/_variables.scss
@@ -1,6 +1,6 @@
-$primaryColor:#9FA8DA !default;
+$primaryColor:#00D158 !default;
 $primaryTextColor:#121212 !default;
-$accentColor:#F48FB1 !default;
+$accentColor:#00a418 !default;
 $accentTextColor:#121212 !default;
 
 @import '../../variables';
